Fixed page spacing.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -12,7 +12,7 @@ main {
 
 .technologies * {
     width: 50%;
-    min-width: 325px;
+    min-width: 260px;
 }
 
 .technologies {
